Add icons to indicate sort status in tables

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -34,7 +34,7 @@
                             <span class="dn-s sr-only">Github</span>
                             <span class="dn di-s pr2">Github</span>
                             <div class="dib svg-wrapper mb1">
-                               {% include "docs/icons/logo-github.njk" %}
+                               {% include "docs/icons/ionicons/logo-github.svg" %}
                             </div>
                         </a>
                     </div>
@@ -48,7 +48,7 @@
             <aside class="js-scroll-top fixed right-0 bottom-0 w3 h3 p2 pb1 mr3 mb3 ba br3 o-60 bg-white relative"
                 style="display: none;">
                 <a class="black stretch-pseudo" href="#top" title="Scroll back to top">
-                    {% include "docs/icons/arrow-up-outline.njk" %}
+                    {% include "docs/icons/ionicons/arrow-up-outline.svg" %}
                 </a>
             </aside>
 
