--- a/docs/pages/example.njk
+++ b/docs/pages/example.njk
@@ -84,14 +84,19 @@ SPDX-License-Identifier: GFDL-1.3-only
     </div>
 
     <div class="container center p2 p3-s">
+        <a
+            class="js-close-examples dib link dark-blue hover-underline p3 pl0 mb3 cursor-pointer"
+            style="display: none;">
+            Close all examples
+        </a>
         {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
             <div class="mt4-between">
                 <div id="{{ file.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
 
-                <h2 class="f4 mt0">{{ file.name | replace("-", " ") | title }}</h2>
+                <h2 class="f4 mv0">{{ file.name | replace("-", " ") | title }}</h2>
 
                 <details>
-                    <summary class="p2 cursor-pointer user-select-none" data-module="{{ file.name }}">
+                    <summary class="p3 cursor-pointer user-select-none" data-module="{{ file.name }}">
                         More information
                     </summary>
 
