--- a/docs/pages/list.njk
+++ b/docs/pages/list.njk
@@ -28,7 +28,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                         Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ file.name }}</span>
                     </h2>
                     <div class="col-12 col-4-m flex justify-end-m nl2">
-                        <a href="/docs/example.html#{{ file.name }}"
+                        <a href="/example.html#{{ file.name }}"
                             class="dib link dark-blue hover-underline p2 ml2-between">
                             Examples
                         </a>
