--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -130,6 +130,12 @@ SPDX-License-Identifier: GFDL-1.3-only
                     </a>
                 </div>
             {% endfor %}
+
+            <div class="dib bg-dark-blue br-pill grow">
+                <a class="dib link ph4 pv3 nowrap white" href="/custom.html" title="Select your own modules">
+                    Customize C4S
+                </a>
+            </div>
         </div>
 
         <h2 id="files">
