--- a/docs/pages/example.njk
+++ b/docs/pages/example.njk
@@ -1,7 +1,7 @@
 {#
-SPDX-FileCopyrightText: 2021 Cas Dijkman
+    SPDX-FileCopyrightText: 2021 Cas Dijkman
 
-SPDX-License-Identifier: GFDL-1.3-only
+    SPDX-License-Identifier: GFDL-1.3-only
 #}
 
 {% extends "docs/layouts/default.njk" %}
@@ -9,76 +9,17 @@ SPDX-License-Identifier: GFDL-1.3-only
 {% import "docs/macros/example.njk" as example %}
 
 {% set description = "C4S CSS documentation examples page" %}
+{% set modules = files | sort(false, false, "name") | selectattr("isModule") | selectattr("isRaw") %}
 
 {% block content %}
-    <style>
-     /* https://github.com/highlightjs/highlight.js/blob/main/src/styles/vs.css */
-
-     .hljs-comment,
-     .hljs-quote,
-     .hljs-variable {
-       color: #008000;
-     }
-
-     .hljs-keyword,
-     .hljs-selector-tag,
-     .hljs-built_in,
-     .hljs-name,
-     .hljs-tag {
-       color: #00f;
-     }
-
-     .hljs-string,
-     .hljs-title,
-     .hljs-section,
-     .hljs-attribute,
-     .hljs-literal,
-     .hljs-template-tag,
-     .hljs-template-variable,
-     .hljs-type,
-     .hljs-addition {
-       color: #a31515;
-     }
-
-     .hljs-deletion,
-     .hljs-selector-attr,
-     .hljs-selector-pseudo,
-     .hljs-meta {
-       color: #2b91af;
-     }
-
-     .hljs-doctag {
-       color: #808080;
-     }
-
-     .hljs-attr {
-       color: #f00;
-     }
-
-     .hljs-symbol,
-     .hljs-bullet,
-     .hljs-link {
-       color: #00b0e8;
-     }
-
-
-     .hljs-emphasis {
-       font-style: italic;
-     }
-
-     .hljs-strong {
-       font-weight: bold;
-     }
-    </style>
-
     <div class="js-example-links js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium  z-1"
         style="top: var(--header-height);">
         <a href="#top" class="link black p3 bl-between bb b--moon-gray nowrap">
             &uarr; <span class="sr-only">Scroll to top</span>
         </a>
-        {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
-            <a href="#{{ file.name }}" class="link black p3 bl-between bb b--moon-gray nowrap">
-                {{ file.name }}
+        {% for module in modules %}
+            <a href="#{{ module.name }}" class="link black p3 bl-between bb b--moon-gray nowrap">
+                {{ module.name }}
             </a>
         {% endfor %}
     </div>
@@ -86,24 +27,89 @@ SPDX-License-Identifier: GFDL-1.3-only
     <div class="container center p2 p3-s">
         <a
             class="js-close-examples dib link dark-blue hover-underline p3 pl0 mb3 cursor-pointer"
-            style="display: none;">
+            style="visibility: hidden;">
             Close all examples
         </a>
-        {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
+        {% for module in modules %}
             <div class="mt4-between">
-                <div id="{{ file.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
+                <div id="{{ module.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
 
-                <h2 class="f4 mv0">{{ file.name | replace("-", " ") | title }}</h2>
+                <h2 class="f4 mv0">{{ module.name | replace("-", " ") | title }}</h2>
 
                 <details>
-                    <summary class="p3 cursor-pointer user-select-none" data-module="{{ file.name }}">
+                    <summary class="p3 cursor-pointer user-select-none" data-module="{{ module.name }}">
                         More information
                     </summary>
 
+                    <a class="db link dark-blue hover-underline p3 pl0 mb3"
+                        href="/list.html#{{ module.name }}">
+                        List of rules <span class="dn di-l">for module <code>{{ module.name }}</code></span>
+                    </a>
+
                     {# add "ignore missing" to the end of include if necessary #}
-                    {% include "docs/partials/examples/" + file.name + ".njk" %}
+                    {% include "docs/partials/examples/" + module.name + ".njk" %}
                 </details>
             </div>
         {% endfor %}
     </div>
+
+    <style>
+        /* https://github.com/highlightjs/highlight.js/blob/main/src/styles/vs.css */
+
+        .hljs-comment,
+        .hljs-quote,
+        .hljs-variable {
+            color: #008000;
+        }
+
+        .hljs-keyword,
+        .hljs-selector-tag,
+        .hljs-built_in,
+        .hljs-name,
+        .hljs-tag {
+            color: #00f;
+        }
+
+        .hljs-string,
+        .hljs-title,
+        .hljs-section,
+        .hljs-attribute,
+        .hljs-literal,
+        .hljs-template-tag,
+        .hljs-template-variable,
+        .hljs-type,
+        .hljs-addition {
+            color: #a31515;
+        }
+
+        .hljs-deletion,
+        .hljs-selector-attr,
+        .hljs-selector-pseudo,
+        .hljs-meta {
+            color: #2b91af;
+        }
+
+        .hljs-doctag {
+            color: #808080;
+        }
+
+        .hljs-attr {
+            color: #f00;
+        }
+
+        .hljs-symbol,
+        .hljs-bullet,
+        .hljs-link {
+            color: #00b0e8;
+        }
+
+
+        .hljs-emphasis {
+            font-style: italic;
+        }
+
+        .hljs-strong {
+            font-weight: bold;
+        }
+    </style>
 {% endblock %}
