--- a/docs/pages/list.njk
+++ b/docs/pages/list.njk
@@ -1,12 +1,13 @@
 {#
-SPDX-FileCopyrightText: 2021 Cas Dijkman
+    SPDX-FileCopyrightText: 2021 Cas Dijkman
 
-SPDX-License-Identifier: GFDL-1.3-only
+    SPDX-License-Identifier: GFDL-1.3-only
 #}
 
 {% extends "docs/layouts/default.njk" %}
 
 {% set description = "C4S CSS documentation list of rules page" %}
+{% set modules = files | sort(false, false, "name") | selectattr("isModule") | selectattr("isRaw") %}
 
 {% block content %}
     <div class="mw8 center p3">
@@ -20,49 +21,51 @@ SPDX-License-Identifier: GFDL-1.3-only
             </div>
         </div>
 
-        {% for file in files %}
-            {% if file.isModule and file.isRaw %}
-                <div class="row bt b--black-20 sticky bg-white bb bw1 ph2"
-                    style="top: var(--sticky-height, 115px);">
-                    <h2 id="{{ file.name }}" class="col-12 col-8-m f5 mv0 nowrap overflow-x-scroll">
-                        Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ file.name }}</span>
-                    </h2>
-                    <div class="col-12 col-4-m flex justify-end-m nl2">
-                        <a href="/example.html#{{ file.name }}"
-                            class="dib link dark-blue hover-underline p2 ml2-between">
-                            Examples
-                        </a>
-                        <a href="{{ file.file | replace(".raw", "") }}"
-                            class="dib link dark-blue hover-underline p2 ml2-between">
-                            View CSS
-                        </a>
+        {% for module in modules %}
+            <div id="{{ module.name }}" class="relative" style="bottom: var(--sticky-height, 115px);"></div>
+
+            <div class="row bt b--black-20 sticky bg-white bb bw1 ph2"
+                style="top: var(--sticky-height, 115px);">
+                <h2 class="col-12 col-8-m f5 mv0 nowrap overflow-x-scroll">
+                    Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ module.name }}</span>
+                </h2>
+                <div class="col-12 col-4-m flex justify-end-m nl2">
+                    <a href="/example.html#{{ module.name }}"
+                        class="dib link dark-blue hover-underline p2 ml2-between">
+                        Examples
+                    </a>
+                    <a href="{{ module.file | replace(".raw", "") }}"
+                        class="dib link dark-blue hover-underline p2 ml2-between">
+                        View CSS
+                    </a>
+                </div>
+            </div>
+
+            {% for rule in module.css.stylesheet.rules %}
+                <div class="row bt b--black-20">
+                    <div class="col-12 col-3-m col-2-l p2">
+                        {% for selector in rule.selectors %}
+                            {{ selector }}{% if not loop.last %},<br>{% endif %}
+                        {% endfor %}
+                    </div>
+                    <div class="col-12 col-m p2 word-break-word">
+                        {% if rule.declarations.length === 1 %}
+                            {% for declaration in rule.declarations %}
+                                {{ declaration.property }}: {{ declaration.value }};
+                            {% endfor %}
+                        {% else %}
+                            <ul class="list-reset bl pv1 pl3 b--moon-gray bw2">
+                                {% for declaration in rule.declarations %}
+                                    <li>
+                                        {{ declaration.property }}: {{ declaration.value }};
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
                     </div>
                 </div>
-                {% for rule in file.css.stylesheet.rules %}
-                    <div class="row bt b--black-20">
-                        <div class="col-12 col-3-m col-2-l p2">
-                            {% for selector in rule.selectors %}
-                                {{ selector }}{% if not loop.last %},<br>{% endif %}
-                            {% endfor %}
-                        </div>
-                        <div class="col-12 col-m p2 word-break-word">
-                            {% if rule.declarations.length === 1 %}
-                                {% for declaration in rule.declarations %}
-                                    {{ declaration.property }}: {{ declaration.value }};
-                                {% endfor %}
-                            {% else %}
-                                <ul class="list-reset bl pv1 pl3 b--moon-gray bw2">
-                                    {% for declaration in rule.declarations %}
-                                        <li>
-                                            {{ declaration.property }}: {{ declaration.value }};
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            {% endif %}
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
+            {% endfor %}
+
         {% endfor %}
     </div>
 {% endblock %}
