--- a/docs/partials/examples/resize.njk
+++ b/docs/partials/examples/resize.njk
@@ -1,13 +1,13 @@
 {#
-SPDX-FileCopyrightText: 2021 Cas Dijkman
+    SPDX-FileCopyrightText: 2021 Cas Dijkman
 
-SPDX-License-Identifier: GFDL-1.3-only
+    SPDX-License-Identifier: GFDL-1.3-only
 #}
 
 {% import "docs/macros/example.njk" as example %}
 
 {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
-    {% if file.name === "" %}
+    {% if file.name === "resize" %}
         {% for rule in file.css.stylesheet.rules %}
             {% call example.generic(file, rule) %}
                 {% set firstSelector %}{{ rule.selectors | first }}{% endset %}
@@ -15,7 +15,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                 {% set readableClasses %}{{ rule.selectors | getClassesFromSelectors | join(" or ") }}{% endset %}
                 {% set caption = "Element with class <code>" + readableClasses + "</code>" %}
 
-                
+                {{ example.exampleNotFound(file.name) }}
             {% endcall %}
         {% endfor %}
     {% endif %}
