--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -20,7 +20,7 @@
             <div class="js-header js-sticky sticky w-100 top-0 bg-white bb b--moon-gray transition-transform-medium z-2">
                 <div class="container-m center ph3 pv2">
                     <div class="df items-center justify-between">
-                        <a href="/" class="df link inherit pr3 pt1">
+                        <a href="/" class="df link color-inherit pr3 pt1">
                             <h1 class="mv0 lh-solid nowrap">
                                 <span class="tracked-tight">C4S</span>
                                 <span class="dn-l">docs</span>
