Add nunjucks function to check if module is css property

--- a/docs/pages/test.njk
+++ b/docs/pages/test.njk
@@ -14,22 +14,22 @@
 
         <div class="mv4 debug-outlines">
             <div class="row">
-                {% for i in "" | getRandomPartition %}
+                {% for i in "" | getRandom12Partition %}
                     <div class="col-{{ i }}">col-{{ i }}</div>
                 {% endfor %}
             </div>
             <div class="row">
-                {% for i in "" | getRandomPartition %}
+                {% for i in "" | getRandom12Partition %}
                     <div class="col-{{ i }}">col-{{ i }}</div>
                 {% endfor %}
             </div>
             <div class="row">
-                {% for i in "" | getRandomPartition %}
+                {% for i in "" | getRandom12Partition %}
                     <div class="col-{{ i }}">col-{{ i }}</div>
                 {% endfor %}
             </div>
             <div class="row">
-                {% for i in "" | getRandomPartition %}
+                {% for i in "" | getRandom12Partition %}
                     <div class="col-{{ i }}">col-{{ i }}</div>
                 {% endfor %}
             </div>
